set width of a section

--- a/style2.css
+++ b/style2.css
@@ -20,6 +20,7 @@ body {
   font-weight: 400;
   min-height: 450px;
   font-size: 118% !important;
+	width: 50rem;
 }
 
 #sbo-rt-content div, #sbo-rt-content div.booksection {
